force-app/main/default/objects/CPQ_Settings__c/CPQ_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>CPQ Settings</label>
</CustomObject>