force-app/main/default/objects/CPQ_Settings__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <description>Renewal Order to SAP web service password</description>
    <label>Password</label>
    <length>50</length>
    <type>Text</type>
</CustomField>