force-app/main/default/objects/CPQ_Settings__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <description>Renewal Order to SAP web service URL</description>
    <label>URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>