force-app/main/default/objects/CPQ_Settings__c/fields/UserName__c.field-meta.xml
<CustomField>
    <fullName>UserName__c</fullName>
    <description>Renewal Order to SAP web service user name</description>
    <label>UserName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>